--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
 	"name":"basicroutes",
 	"description":"basic routing with submission",
 	"version":"0.0.2",
-	"private":true,
+	"private":false,
+  "scripts": {
+  "start": "node app.js"
+  },
 	"dependencies":
 	{
 		"express":"3.x",
