Scaffolding of facing app

--- a/package.json
+++ b/package.json
@@ -1,14 +1,26 @@
- {
-	"name":"basicroutes",
-	"description":"basic routing with submission",
-	"version":"0.0.2",
-	"private":false,
-	"dependencies":
-	{
-		"express":"3.x",
-		"passport":"0.3.2",
-		"passport-local":"1.0.0",
-		"mongoose":"4.2.8",
-		"body-parser":"1.14.1"
-	}
- }
+{
+  "name": "facing-app",
+  "version": "0.0.1",
+  "private": true,
+  "scripts": {
+    "start": "node app.js"
+  },
+  "dependencies": {
+    "express": "^4.13.3",
+    "serve-favicon": "^2.3.0",
+    "morgan": "^1.6.1",
+    "cookie-parser": "^1.3.3",
+    "body-parser": "^1.13.3",
+    "compression": "^1.5.2",
+    "method-override": "^2.3.0",
+    "glob": "^6.0.4",
+    "mongoose": "^4.1.2",
+    "ejs": "^2.3.1"
+  },
+  "devDependencies": {
+    "gulp": "^3.9.0",
+    "gulp-nodemon": "^2.0.2",
+    "gulp-livereload": "^3.8.0",
+    "gulp-plumber": "^1.0.0"
+  }
+}
