--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "method-override": "^2.3.0",
     "mongoose": "^4.1.2",
     "morgan": "^1.6.1",
+    "multer": "^1.2.0",
     "serve-favicon": "^2.3.0"
   },
   "devDependencies": {
