--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "mongoose": "^4.1.2",
     "morgan": "^1.6.1",
     "multer": "^1.2.0",
-    "serve-favicon": "^2.3.0"
+    "serve-favicon": "^2.3.0",
+    "socket.io": "^1.4.8"
   },
   "devDependencies": {
     "gapidoc": "^0.1.1",
