--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mongoose": "^4.1.2",
     "morgan": "^1.6.1",
     "multer": "^1.2.0",
+    "node.extend": "^1.1.5",
     "serve-favicon": "^2.3.0",
     "socket.io": "^1.4.8"
   },
