--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "multer": "^1.2.0",
     "node.extend": "^1.1.5",
     "serve-favicon": "^2.3.0",
-    "socket.io": "^1.4.8"
+    "socket.io": "^1.4.8",
+    "socket.mvc": "^0.2.0"
   },
   "devDependencies": {
     "gapidoc": "^0.1.1",
